--- a/package.xml
+++ b/package.xml
@@ -31,6 +31,7 @@
    <dir name="bin">
     <file baseinstalldir="" name="TillStore" role="script">
      <tasks:replace from="@php_bin@" to="php_bin" type="pear-config" />
+     <tasks:replace from="@php_dir@" to="php_dir" type="pear-config" />
      <tasks:replace from="@data_dir@" to="data_dir" type="pear-config" />
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
