--- a/package.xml
+++ b/package.xml
@@ -40,6 +40,7 @@
    </dir>
    <dir name="docs">
     <file role="doc" baseinstalldir="TillStore" name="benchmark.txt" />
+    <file role="doc" baseinstalldir="TillStore" name="HISTORY.md" />
     <file role="doc" baseinstalldir="TillStore" name="INSTALL.md" />
    </dir>
    <dir name="etc">
